# hillclimb

./: .gitignore  AGENTS.md  AGENT_NOTES.md  IdleDetection.md  InclineSpeedSpreadsheet.xlsx  README.md  WORKLOG.md  hc_cli.py  hc_curve.py  hc_curve_web-68b670ecd5f55f24.js  hc_curve_web-68b670ecd5f55f24_bg.wasm  hc_curve_web-fa5ea25b09791017.js  hc_curve_web-fa5ea25b09791017_bg.wasm  hc_plotting.py  index.html  requirements.txt  ~$InclineSpeedSpreadsheet.xlsx
.github/workflows/: ci-smoke.yml  deploy-web.yml
Tracklogs/Outdoor/: 20420562012_ACTIVITY.fit
Tracklogs/Treadmill/: 20387570593_ACTIVITY.fit  20387677883_ACTIVITY.fit  20448996465_ACTIVITY.fit
docs/: REVIEW_2025-12-18.md  WEB_APP_USAGE.md  algorithm_lab_ux.md  ascent_algorithm_schema.md  ascent_bench_harness.md  ascent_reference_algorithms.md  compute_semantics.md  fit_parsing_strategy.md  gain_time_spec.md  handoff_prompt_next_agent.md  mathematica_gain_time.wl  personas_defaults.md  targets_example.txt  usage_recipes.md  verification.md  verify_gain_time.py  web_mvp_spec.md
hc_curve_rs/: Cargo.toml  README.md
hc_curve_rs/.github/workflows/: deploy.yml
hc_curve_rs/hc_curve/: Cargo.toml
hc_curve_rs/hc_curve/src/: ascent.rs  lib.rs  wr.rs
hc_curve_rs/hc_curve_cli/: Cargo.toml
hc_curve_rs/hc_curve_cli/src/: main.rs
hc_curve_rs/hc_curve_web/: Cargo.toml  Trunk.toml  build.rs  index.html
hc_curve_rs/hc_curve_web/src/: lib.rs
notes/: BACKLOG.md  CHAT.md  MEMORY.md  SCRUTINY.md  WORKLOG.md
tests/: test_hc_curve.py
